fixing to right url for 20.215.135.129 slskd